refactor(runtime): move the bridge to Java, keep Clojure as the API
Every downcall was a reflective invokeWithArguments and the host upcall's target
was a bound IFn adapted with asType - the two shapes a GraalVM native image drops
unless somebody registers them, and a green JVM suite never notices. In Java the
downcalls are invokeExact against signatures the compiler knows and the upcall
target is a static method found by name. Clojure keeps argument shapes, keyword
maps and EDN, one namespace of one-line functions.

Vis-Session: 41d78df4-8a08-4eaa-b860-134ed80f6965